[tool.poetry]
name = "s4"
version = "0.1.0"
description = "like S3"
authors = ["Dmitriy Shikhalev <dmitriy.shikhalev@gmail.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
aiofiles = "^24.1.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
pylint = "^3.2.5"
pytest-pylint = "^0.21.0"
pytest-mypy = "^0.10.3"
pytest-cov = "^5.0.0"
coverage = "^7.5.4"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--no-cov-on-fail --cov --pylint --mypy -vvv"
testpaths = [
    "tests",
]
